[package]
name = "ashell"
description = "A ready to go Wayland status bar for Hyprland and Niri"
homepage = "https://malpenzibo.github.io/ashell/"
repository = "https://github.com/MalpenZibo/ashell"
license = "MIT"
version = "0.7.0"
edition = "2024"
rust-version = "1.89"

[profile.release]
lto = "thin"
strip = true
opt-level = 3
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[package.metadata.nfpm]
provides = ["ashell"]
depends = ["libxkbcommon", "dbus"]

[package.metadata.nfpm.deb]
depends = ["libwayland-client0", "libpipewire-0.3-0t64", "libpulse0"]
[package.metadata.nfpm.rpm]
depends = ["libwayland-client", "pipewire-libs", "pulseaudio-libs"]

[dependencies]
iced = { git = "https://github.com/MalpenZibo/iced", rev = "daccb115c0827bd67fb11bf767db15b2066ed9df", features = [
  "tokio",
  "multi-window",
  "advanced",
  "wgpu",
  "winit",
  "wayland",
  "image",
  "svg",
  "canvas",
] }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }
hyprland = "0.4.0-beta.2"
serde = { version = "1.0", default-features = false, features = [] }
sysinfo = "0.37"
tokio = { version = "1", default-features = false, features = [] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
libpulse-binding = { version = "2.28", features = ["pa_v15"] }
log = { version = "0.4", features = [] }
flexi_logger = "0.31"
pipewire = "0.9"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "unstable"] }
itertools = "0.14"
hex_color = { version = "3", features = ["serde"] }
anyhow = "1"
udev = { version = "0.9", features = ["send", "sync"] }
toml = "0.9"
freedesktop-icons = "0.4"
linicon-theme = "1.2.0"
serde_json = "1"
regex = "1.12.2"
serde_with = { version = "3.12", default-features = false, features = [
  "macros",
] }
tokio-stream = { version = "0.1", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }
clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
] }
shellexpand = { version = "3", features = ["path"] }
inotify = { version = "0.11.0", default-features = false, features = [
  "stream",
] }
pin-project-lite = "0.2.16"
niri-ipc = "25.11.0"
parking_lot = "0.12.5"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
url = "2.5.7"
signal-hook = "0.4.3"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
libc = "0.2.182"


[build-dependencies]
allsorts = "0.15"

[package.metadata.rpm]
package = "ashell"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ashell = { path = "/usr/bin/ashell" }
