[package]
name = "ashell-guido"
edition = "2024"
version = "0.1.0"

[dependencies]
guido = { path = "../guido" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hyprland = "0.4.0-beta.2"
niri-ipc = "25.11.0"
sysinfo = "0.37"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "process", "sync", "io-util"] }
log = "0.4"
env_logger = "0.11"
itertools = "0.14"
serde_json = "1"
anyhow = "1.0.101"
inotify = { version = "0.11", default-features = false, features = ["stream"] }
futures = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"] }
libpulse-binding = { version = "2.28", features = ["pa_v15"] }
udev = { version = "0.9", features = ["send", "sync"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }

[build-dependencies]
allsorts = "0.15"
